Primer Commit desde VS code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Git Visual</title>
+    <title>Git Visual cambios 1</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, quasi?
+        </p>
+    </div>
+  </body>
 </html>
