--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Git Visual cambios 1</title>
   </head>
   <body>
+    <h1> GIT en VS code</h1>
     <div>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, quasi?
+            <span> Esta es una nueva linea</span>
         </p>
     </div>
   </body>
